@startuml

title __CONTROLLER's Class Diagram__\n

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      class hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController {
          {static} - numParamError : String
          - scanner : Scanner
          + CVFSController()
          + getCommand()
          + processCommand()
          + terminal()
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      class hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser {
          - typeMap : HashMap<OpType, Ops>
          + parse()
          + redo()
          + undo()
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      interface hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops {
          {abstract} + operate()
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      class hk.edu.polyu.comp.comp2021.cvfs.controller.CommandSwitch {
          {static} + getType()
      }
    }
  }
  

  namespace hk.edu.polyu.comp.comp2021.cvfs {
    namespace controller {
      enum CommandType {
        changeDir
        delete
        invalid
        list
        load
        newBinaryCri
        newDir
        newDisk
        newDoc
        newNegation
        newSimpleCri
        printAllCriteria
        rList
        redo
        rename
        rsearch
        search
        store
        undo
      }
    }
  }
  

  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController o-- hk.edu.polyu.comp.comp2021.cvfs.model.CVFS : cvfs
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser : logger
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController o-- hk.edu.polyu.comp.comp2021.cvfs.view.CVFSView : view
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController +-down- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops : add
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops : cd
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops : dd
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops : del
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops : ld
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.model.TraceLogger : logger
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops : ren
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser o-- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops : sd
  hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser +-down- hk.edu.polyu.comp.comp2021.cvfs.controller.CVFSController.loggerParser.Ops


right footer


CVFS(Comp Virtual File System) Class Diagram proposed by Group 30: MAN Furui, WANG Meng, XING Shiji, ZHANG Yubo.
COMP2021 Object-Oriented Programming, Year 2020 Semester 1, The Hong Kong Polytechnic University.
endfooter

@enduml
